# generative-ai-vdos

./: .env.example  .flake8  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  todos.md
.claude/commands/: refine.md
backend/: .env.example  manage.py
backend/config/: celery.py  settings.py  urls.py
backend/tests/: test_auth_smoke.py  test_auth_views.py  test_cognito_helpers.py  test_models_joblog.py  test_models_projects.py  test_models_scenes.py  test_models_users.py  test_state_machine.py
docs/: INTERNALS.md  medium-draft.html  medium-draft.md  mockup.html  storages.md  webapp-mvp-spec.md  webapp-spec.md
examples/: README.md
examples/the-sharing-berry/: shot_plan.json
pipeline/: assemble.py  auto.py  env.py  refine.py  run.py  schema.py  script_agent.py  secure.py  styles.py  voiceover.py
pipeline/compose/: __init__.py  __main__.py
pipeline/images/: __init__.py  __main__.py  base.py  flux.py  gpt_image.py  pexels.py  placeholder.py  qwen_image.py  util.py
pipeline/video/: __init__.py  __main__.py  base.py  wan.py
remotion/: README.md  package-lock.json  package.json  remotion.config.ts  tsconfig.json
remotion/src/: LowerThird.tsx  Outro.tsx  Quote.tsx  Root.tsx  TitleCard.tsx  fonts.ts  theme.ts
scripts/deploy/: backend.service  celery-images.service  nginx.conf  (+6 more)
tests/: test_animate_flag.py  test_expand.py  test_image_provider_selection.py  test_pipeline_isolation.py  test_styles.py  test_video_batch.py  test_voiceover_helpers.py
webapp/: README.md  middleware.ts  next.config.mjs  package-lock.json  package.json
(+155 files in other folders)
