[project]
name = "generative-ai-vdos"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.40",
    "pydantic>=2.5",
    "edge-tts>=6.1",
    "pillow>=10.0",
]

[project.optional-dependencies]
replicate = ["replicate>=0.32"]
faceswap = [
    "insightface>=0.7",
    "onnxruntime>=1.16",
    "opencv-python-headless>=4.8",
]
webapp = [
    "Django>=5.2,<5.3",
    "djangorestframework>=3.17.1",
    "django-cors-headers>=4.4",
    "celery>=5.4",
    "redis>=5.0",
    "python-jose[cryptography]>=3.3",
    "requests>=2.28",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest>=9.1.0",
    "ruff>=0.15.13",
]

